Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*  {
+  overflow-x: hidden;
+}
+
 .intelisense-test {
   color: olivedrab;
 }
